bin_PROGRAMS = testWorldObject

testWorldObject_SOURCES = testWorldObject.cc WorldObject.cc
testWorldObject_LDADD = @standard_objs@ @read_write_lock@ @physics_engine_obj@ 
AM_CXXFLAGS = @standard_flags@ @standard_incs@ @read_write_lock_inc@ @physics_engine_incs@ @ogre_flags@ @ode_flags@ @interpreter_incs@ @lsystem_incs@
