bin_PROGRAMS = testLSystemWorldObject

testLSystemWorldObject_SOURCES = testLSystemWorldObject.cc LSystemWorldObject.cc
testLSystemWorldObject_LDADD = @standard_objs@ @read_write_lock@ @physics_engine_obj@ @world_object_obj@ @lsystem_generic_obj@ @lsystem_generic_interpreter_obj@ @lsystem_incremental_interpreter_obj@
AM_CXXFLAGS = @standard_flags@ @standard_incs@ @read_write_lock_inc@ @physics_engine_incs@ @world_object_incs@ @lsystem_incs@ @lsystem_interpreter_incs@ @ogre_flags@ @ode_flags@ @matrix_inc@
