bin_PROGRAMS = testStaticSphereObject

testStaticSphereObject_SOURCES = testStaticSphereObject.cc StaticSphereObject.cc
testStaticSphereObject_LDADD = @standard_objs@ @read_write_lock@ @physics_engine_obj@ @world_object_obj@
AM_CXXFLAGS = @standard_flags@ @standard_incs@ @read_write_lock_inc@ @physics_engine_incs@ @world_object_incs@ @ogre_flags@ @ode_flags@ @interpreter_incs@ @lsystem_incs@
